Bug 124333 - Fileopen: Wrong ZOrder of OLE object imported from PPTX
Summary: Fileopen: Wrong ZOrder of OLE object imported from PPTX
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
: 66581 (view as bug list)
Depends on:
Blocks: PPTX-OLE
  Show dependency treegraph
 
Reported: 2019-03-26 23:58 UTC by Ofir
Modified: 2023-01-24 12:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
PPTX with OLE (40.48 KB, application/zip)
2019-03-27 00:00 UTC, Ofir
Details
PDF exported from PowerPoint 2013 showing the expected result (80.94 KB, application/pdf)
2019-03-27 00:01 UTC, Ofir
Details
comparison MSO 2010 and LibreOffice 6.3 Master (12.93 KB, image/png)
2019-05-09 09:27 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ofir 2019-03-26 23:58:46 UTC
Description:
The attached PPTX has OLE object (Word Document) and blue rectangle. The rectangle should be in front of the object but in Impress the OLE always has the highest ZOrder.

Steps to Reproduce:
1. Open the attached PPTX file in Impress.
2. Compare the result to the attached PDF exported from PowerPoint 2013 showing the expected result.

Actual Results:
The OLE object is in front of the blue rectangle.

Expected Results:
The OLE object should be behind the blue rectangle.


Reproducible: Always


User Profile Reset: No



Additional Info:
To add OLE object to PowerPoint 2013:
1. Copy some text in Word.
2. In PowerPoint under the Home tab click on 'Paste Special' and select 'Microsoft Word Document Object'.

https://support.office.com/en-us/article/import-content-from-other-applications-into-powerpoint-8165a079-e639-4278-81be-8b3ee94f81fb
Comment 1 Ofir 2019-03-27 00:00:45 UTC
Created attachment 150291 [details]
PPTX with OLE
Comment 2 Ofir 2019-03-27 00:01:13 UTC
Created attachment 150292 [details]
PDF exported from PowerPoint 2013 showing the expected result
Comment 3 Xisco Faulí 2019-05-09 09:27:09 UTC
Created attachment 151267 [details]
comparison MSO 2010 and LibreOffice 6.3 Master
Comment 4 Xisco Faulí 2019-05-09 09:29:34 UTC
REproduced in

Version: 6.3.0.0.alpha0+
Build ID: 64faea31f7d05e46fe5c91f87381ec7abae90174
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded


Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

and

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a
Comment 5 Ofir 2019-08-13 22:41:44 UTC
Reproduced on LibreOffice 6.3.0.4 30(Build:4)
Comment 6 Julien Nabet 2021-09-10 16:04:17 UTC
Just for the record, I could reproduce this on pc Debian x86-64 with master sources updated today.
Comment 7 Commit Notification 2022-09-28 12:17:20 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/adc042f95d3dbd65b778260025d59283146916e5

tdf#124333 PPTX import: fix Z-order of embedded OLE objects

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Tünde Tóth 2022-09-28 12:31:55 UTC
*** Bug 66581 has been marked as a duplicate of this bug. ***
Comment 9 Julien Nabet 2022-09-28 13:10:31 UTC
On pc Debian x86-64 with master sources updated today 42a73e2259d5937ffb8896f7cd24991f83b1ad82, I confirm I don't reproduce this anymore.
Comment 10 NISZ LibreOffice Team 2022-09-29 06:35:04 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 48b9cbc742de3f6120986cb6cafc92eb5009da82
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 11 Commit Notification 2022-11-01 10:14:40 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7f91933023a844f53b498439fb0e2752d46b01d5

tdf#124333 PPTX import: fix Z-order of embedded OLE objects

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.